authentik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-server
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`authentik.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: authentik-server
          kind: Service
          namespace: authentik
          port: http
  tls:
    secretName: authentik-server-tls
